syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";

message SumRequest {
  int64 first_number = 1;
  int64 second_number = 2;
}

message SumResponse {
  int64 sum_result = 1;
}

message PrimeNumberRequest {
  int64 number = 1;
}

message PrimeNumberResponse {
  int64 prime_factor = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};
  rpc PrimeNumber(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};
}
